Improve pkg mgr cache expiration detection

--- a/templates/needs-restarting.j2
+++ b/templates/needs-restarting.j2
@@ -10,6 +10,8 @@
 # 1 = Need restarting
 # 2 = Unmanaged system
 
+set -e
+
 {% if ansible_os_family == 'Archlinux' %}
 test -f /boot/vmlinuz-linux || exit 2
 test "$(file -bL /boot/vmlinuz-linux | grep -oP '(?<=version )[^ ]*')" "==" "$(uname -r)"
