--- a/templates/apt/sources.list.j2
+++ b/templates/apt/sources.list.j2
@@ -1,4 +1,7 @@
 {% set mirrors = system_apt_mirrors | default(system_apt_default_mirrors) %}
 {% for mirror in mirrors %}
-deb {{ mirror.url }} {{ mirror.branch }} {{ mirror.sections | join(' ') }}
+{% for branch in mirror.branches %}
+deb {{ mirror.url }} {{ branch }} {{ mirror.sections | join(' ') }}
+{% endfor %}
+
 {% endfor %}
