Add storage management

--- a/templates/apt/sources.list.j2
+++ b/templates/apt/sources.list.j2
@@ -1,7 +1,7 @@
-{% set mirrors = system_apt_mirrors | default(system_apt_default_mirrors) %}
+{% set mirrors = system_apt_mirrors | default(apt_default_mirrors) %}
 {% for mirror in mirrors %}
 {% for branch in mirror.branches %}
-deb {{ mirror.url }} {{ branch }} {{ mirror.sections | join(' ') }}
+deb{% if (mirror.trusted | default(false)) %} [trusted=yes]{% endif %} {{ mirror.url }} {{ branch }} {{ mirror.sections | join(' ') }}
 {% endfor %}
 
 {% endfor %}
