--- a/templates/network/interfaces.d/netiface.j2
+++ b/templates/network/interfaces.d/netiface.j2
@@ -13,7 +13,7 @@ iface {{ system_netiface.name }} inet {{ bootproto }}
     address {{ system_netiface.ip | ansible.utils.ipaddr }}
 {% endif %}
 {% if system_netiface.gateway is defined %}
-    gateway {{ system_netiface.gateway }}
+    gateway {{ system_netiface.gateway | ansible.utils.ipaddr('address') }}
 {% endif %}
 {% endif %}
 {% if system_netiface.options is defined %}
@@ -24,7 +24,7 @@ iface {{ system_netiface.name }} inet {{ bootproto }}
 
 {% if system_netiface.routes is defined %}
 {% for route in system_netiface.routes %}
-    down ip route add {{ route.network }}{% if route.gateway is defined %} via {{ route.gateway }}{% endif %} dev {{ system_netiface.name }}
-    up ip route add {{ route.network }}{% if route.gateway is defined %} via {{ route.gateway }}{% endif %} dev {{ system_netiface.name }}
+    down ip route add {{ route.network }}{% if route.gateway is defined %} via {{ route.gateway | ansible.utils.ipaddr('address') }}{% endif %} dev {{ system_netiface.name }}
+    up ip route add {{ route.network }}{% if route.gateway is defined %} via {{ route.gateway | ansible.utils.ipaddr('address') }}{% endif %} dev {{ system_netiface.name }}
 {% endfor %}
 {% endif %}
