--- a/templates/portage/make.conf.j2
+++ b/templates/portage/make.conf.j2
@@ -28,3 +28,4 @@ VIDEO_CARDS="{{ system_portage_video_cards | join(' ') }}"
 # Software multi-slots
 PYTHON_TARGETS="{{ python_targets }}"
 PYTHON_SINGLE_TARGET="{{ system_portage_python_single_target }}"
+RUBY_TARGETS="{{ system_portage_ruby_targets | join(' ') }}"
