--- a/templates/apt/apt.conf.d/20auto-upgrades.j2
+++ b/templates/apt/apt.conf.d/20auto-upgrades.j2
@@ -1,4 +1,4 @@
 # {{ ansible_managed }}
 
-APT::Periodic::Update-Package-Lists "1";
-APT::Periodic::Unattended-Upgrade "1";
+APT::Periodic::Update-Package-Lists "{{ system_packages_upgrade_unattended | int }}";
+APT::Periodic::Unattended-Upgrade "{{ system_packages_upgrade_unattended | int }}";
