--- a/templates/ssh/sshd_config.j2
+++ b/templates/ssh/sshd_config.j2
@@ -3,11 +3,11 @@
 # This is the sshd server system-wide configuration file.  See
 # sshd_config(5) for more information.
 
-{% if 'include' in (config.keys() | map('lower')) %}
+{% for key, value in config.items() if (key | lower) == 'include' %}
 # Make sure that all Match options are below this Include!
-Include "/etc/ssh/sshd_config.d/*.conf"
+{{ key }} "{{ value }}"
 
-{% endif %}
+{% endfor %}
 {% for key, value in config.items() if not (key | lower) == ['include', 'match'] %}
 
 {% if (key | lower) in (list_separated_by_comma | map('lower')) %}
